Add new article feature using form_for

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -14,6 +14,7 @@
 
 -->
 
+<!--
 <%=form_tag('/articles', method: :post) do%>
 
     <%=label_tag('Title:')%>
@@ -24,7 +25,24 @@
     <%=text_area_tag('description')%>
     <br>
 
-    <%=submit_tag()%>
+    <%=submit_tag('Create')%>
 
 
+<%end%>
+
+-->
+
+
+
+
+<%=form_for(@article)do |f|%>
+    <%=label(:article, :title, 'Title: ')%>
+    <%=f.text_field(:title, placeholder:'your title is here')%>
+    <br>
+
+    <%=label(:article, :description, 'Description: ')%>
+    <%=f.text_area(:description, placeholder:'Enter your post here ')%>
+    <br>
+    
+    <%=f.submit%>
 <%end%>
