--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,14 +5,22 @@
     <tr>
         <th>Title</th>
         <th>Description</th>
+        <th>Actions</th>
     </tr>
 
     <%@articles.each do |article|%>
         <tr>
             <td><%= article.title%></td>
             <td><%=article.description%> </td>
+            <td> <%=link_to 'Show',article_path(article) %> </td>
+            <td> <%=link_to 'Edit', edit_article_path(article) %> </td>
+            <td> <%=link_to('Delete', article_path(article), method: :delete)%> </td>
         
         </tr>
          
     <%end%>
 </table>
+
+<p>
+    <%=link_to 'NEW ARTICLE', new_article_path %>
+</p>
