--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Update article</h1>
+<h1 class="text-center mb-4 mt-4">Update article</h1>
 <!--
 <%=form_for(@article)do |f|%>
     <%=label(:article, :title, 'Title: ')%>
