Add styling to validation and flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,7 @@
 
   <body>
     <%= render 'layouts/navbar'%>
-    <%flash.each do |k,v|%>
-      <%= v %>
-    <%end%>
+    <%= render 'layouts/messages'%>
     <%= yield %>
   </body>
 </html>
