--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,3 @@
-<h1>Create a new user </h1>
-<%if @user.errors.any?%>
-    <ul>
-         <%@user.errors.full_messages.each do |msg|%>
-            <li> <%=msg%> </li>
-        <%end%>
-    </ul>
-<%end%>
-<%=form_with(model: @user, local: true) do |f|%>
-    <%=f.label(:name)%>
-    <%=f.text_field(:name)%>
-    <br>
+<h1 class="text-center mb-4 mt-4">Sign-up</h1>
+<%= render 'form'%>
 
-    <%=f.label(:email)%>
-    <%=f.email_field(:email)%>
-    <br>
-
-    <%=f.label(:password)%>
-    <%=f.password_field(:password)%>
-    <br>
-
-    <%=f.submit%>
-<%end%>
