minor updates to UI
- Add user's profile picture to each article
- Add ability to edit user's profile from the the profile page
-After updating user's info; user is redirected to user's profile

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,7 @@
       <div class="card text-center mb-5 mt-5">
         <div class="card-header">
           By: <%=@article.user.name%>
+           <div class="mt-1"> <%=gravatar(@article.user)%> </div>
         </div>
         <div class="card-body">
           
