--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,7 +4,7 @@
             <% @articles.each do |article|%>
                 <div class="card text-center mb-5 mt-5">
                     <div class="card-header">
-                        By: <%=article.user.name%>
+                        By: <%=link_to article.user.name, user_path(article.user)%>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title"> <%=link_to article.title, article_path(article), class:'text-success'%> </h5>
