--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <h1 class="text-center mb-4 mt-4"> <%=@user.name%>'s profile </h1>
 <%=gravatar(@user,size: 200)%>
+<div class="text-center mb-4 mt-4"><%=link_to'Edit Profile', edit_user_path(@user), class:"btn btn-outline-primary"%></div>
 <%=render 'articles/article'%>
