--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <%flash.each do |k,v|%>
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
+
+    <div class="alert alert-<%=k == 'notic' ? 'success' : 'danger'%> alert-dismissible fade show" role="alert">
       <%= v %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
@@ -8,3 +9,4 @@
     </div>
   <%end%>
 </div>
+
