--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,7 +22,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <%= link_to 'Logout', logout_path, method: :delete, class:'nav-link'%>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
