Add authenticate helper methods & change navbar btns based on session state

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,9 +21,22 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item">
+        <%if logged_in? %>
+          <li class="nav-item">
+          <%= link_to current_user.name, user_path(current_user.id), class:'nav-link'%>
+          </li>
+
+          <li class="nav-item">
           <%= link_to 'Logout', logout_path, method: :delete, class:'nav-link'%>
-        </li>
+          </li>
+        <%else%>
+          <li class="nav-item">
+          <%= link_to 'Log In', login_path, class:'nav-link'%>
+          </li>
+          <li class="nav-item">
+          <%= link_to 'Sign up', signup_path, class:'nav-link'%>
+          </li>
+        <%end%>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
