--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-center mb-4 mt-4"> <%=@user.name%>'s profile </h1>
 <%=gravatar(@user,size: 200)%>
-<div class="text-center mb-4 mt-4"><%=link_to'Edit Profile', edit_user_path(@user), class:"btn btn-outline-primary"%></div>
+<div class="text-center mb-4 mt-4"><%=link_to'Edit Profile', edit_user_path(@user), class:"btn btn-outline-primary" if logged_in? && @user == current_user%></div>
 
 <div class="digg_pagination row justify-content-center mt-3">
     <%= will_paginate @articles, :container => false %>
