--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -10,8 +10,10 @@
                         <h5 class="card-title"> <%=link_to article.title, article_path(article), class:'text-success'%> </h5>
                         <p class="card-text"><%=article.description%></p>
                         <%=link_to'View', article_path(article), class:"btn btn-outline-success"%>
-                        <%=link_to'Edit', edit_article_path(article), class:"btn btn-outline-primary"%>
-                        <%=link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure?!'}, class:"btn btn-outline-danger"%>
+                        <%if logged_in? && article.user == current_user%>
+                            <%=link_to'Edit', edit_article_path(article), class:"btn btn-outline-primary"%>
+                            <%=link_to'Delete', article_path(article), method: :delete, data: {confirm: 'Are you sure?!'}, class:"btn btn-outline-danger" %>
+                        <%end%>
                     </div>
                     <div class="card-footer text-muted">
                        <small>created <%= time_ago_in_words(article.created_at)%> ago, edited <%=time_ago_in_words(article.updated_at)%> ago</small> 
