--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
             Articles
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <%= link_to 'Create a new article', new_article_path, class:"dropdown-item"%>
+            <%= link_to 'Create a new article', new_article_path, class:"dropdown-item" if logged_in?%>
             <%= link_to 'Articles', articles_path, class:"dropdown-item"%>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
