--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,9 +22,19 @@
           </div>
         </li>
         <%if logged_in? %>
-          <li class="nav-item">
+          <%# <li class="nav-item">
           <%= link_to current_user.name, user_path(current_user.id), class:'nav-link'%>
-          </li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.name%>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to 'View Profile', user_path(current_user), class:"dropdown-item" %>
+            <%= link_to 'Edit Profile', edit_user_path(current_user), class:"dropdown-item"%>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
 
           <li class="nav-item">
           <%= link_to 'Logout', logout_path, method: :delete, class:'nav-link'%>
