--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,6 +31,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to 'View Profile', user_path(current_user), class:"dropdown-item" %>
             <%= link_to 'Edit Profile', edit_user_path(current_user), class:"dropdown-item"%>
+            <%= link_to 'Delete Profile', user_path(current_user), class:"dropdown-item text-danger", method: :delete, data: {confirm: "Are you sure?"} %>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
