--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
           <%= link_to current_user.name, user_path(current_user.id), class:'nav-link'%>
           <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= current_user.name%>
+            <%= '[Admin]' if current_user.admin?%> <%=  current_user.name%>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to 'View Profile', user_path(current_user), class:"dropdown-item" %>
