--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,6 +21,16 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Categories
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to 'Create a new category', new_category_path, class:"dropdown-item" if logged_in? && current_user.admin?%>
+             <div class="dropdown-divider"></div>
+            <%= link_to 'Show all Categories', categories_path, class:"dropdown-item"%>
+          </div>
+        </li>
         <%if logged_in? %>
           <%# <li class="nav-item">
           <%= link_to current_user.name, user_path(current_user.id), class:'nav-link'%>
