Add associations from UI

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,14 @@
             <%=f.text_area :description, rows: 10, class:"form-control shadow rounded", placeholder: "Description of article"%>
           </div>
         </div>
+        <div class="form-group row">
+          <%=f.label :category, class: "col-2 col-form-label text-light" %>
+          <div class="col-10">
+           <%=f.collection_select(:category_ids, Category.all, :id, :name,
+                                   {prompt: 'please select from the below (could be empty)'},
+                                    {class:'shadow rounded custom-select', multiple: true})%>
+          </div>
+        </div>
         <div class="form-group row justify-content-center">
           <%=f.submit class: 'btn btn-outline-light btn-lg'%>
         </div>
