--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,6 +5,7 @@
                 <div class="card text-center mb-5 mt-5">
                     <div class="card-header">
                         By: <%=link_to article.user.name, user_path(article.user)%>
+                        <div class="mt-2"><%= render article.categories%></div>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title"> <%=link_to article.title, article_path(article), class:'text-success'%> </h5>
