--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,6 +11,7 @@
                     
                     <div class="card-body">
                         <h5 class="card-title"> <%=link_to category.name, category_path(category), class:'text-success'%> </h5>
+                        <div> <%=pluralize(category.articles.count, 'Article')%></div>
                     </div>
                     <div class="card-footer text-muted">
                        <small>created <%= time_ago_in_words(category.created_at)%> ago, edited <%=time_ago_in_words(category.updated_at)%> ago</small> 
