--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,19 +1,3 @@
 <h1 class="text-center">Create a new category</h1> <br>
 
-<div class="container">
-    <%=render 'shared/errors', obj: @category%>
-    <%= form_with(model: @category, class: 'bg-info rounded p-3 shadow', local: true) do |f| %>
-
-        <div class="form-group row">
-            <%=f.label(:name, class:'text-white col-2 col-form-label')%>
-            <div class="col-10">
-                <%= f.text_field:name, class:'form-control shadow rounded' %>
-            </div>
-        </div>
-
-        
-        <div class="form-group row justify-content-center">
-            <%=f.submit class:"btn btn-outline-light" %>
-        </div>
-    <%end%>
-</div>
+<%=render 'form'%>
